# tesar

./: .env  .gitignore  .packit.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  __main__.py  brew_api.py  copr_api.py  parse_args.py  pyproject.toml  req.json  setup.cfg  setup.py  tesar.py  tesar.spec  test_enge.sh  tf-api-req.py  tf_api_req.py  tf_send_request.py
.github/: label-commenter-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  proposal.md
.github/workflows/: unit-tests.yml
dispatch/: __init__.py  __main__.py  brew_api.py  copr_api.py  tf_send_request.py
dispatcher/: .config  __init__.py  __main__.py  brew_api.py  copr_api.py  tesar  tf_send_request.py
enge/tesar/: basecommand.py  cli.py  common.py  test_tfrequest.py  tfrequest.py  tfresult.py
enge/tesar/dispatch/: command.py
enge/tesar/raw_dispatch/: command.py
get_id/: __main__.py  get_id.py
report/: __main__.py
src/dispatch/: __init__.py  __main__.py  brew_api.py  copr_api.py  dispatch_globals.py  tf_send_request.py
src/report/: __main__.py
src/tesar/: __init__.py  __main__.py
src/tesar/dispatch/: __init__.py  __main__.py  brew_api.py  copr_api.py  dispatch_globals.py  tf_send_request.py
src/tesar/report/: __main__.py
tesar/: __main__.py
tests/: test_args.py
