[metadata]
name = tesar
version = 2023.06.29
author = Daniel Diblik
author_email = ddiblik@redhat.com
description = Testing farm API requests dispatcher.
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/danmyway/tesar",
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    envparse
    requests
    copr
    koji
    prettytable
    lxml
    pygments

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tesar = tesar.__main__:main

[tox:tox]
envlist = py39

[testenv]
deps = pytest
commands = pytest -s tests
